--- a/home.html
+++ b/home.html
@@ -6,35 +6,53 @@
     <link rel="stylesheet" href="home.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Rubik:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
     />
     <script defer src="home.js"></script>
-    <title>HoliDayDreamer</title>
+    <title>Holiday Website</title>
   </head>
   <body>
-    <div class="bgPhoto">
-      <nav>
+    <div class="banner">
+      <header>
         <div class="company__name">
           <h2>Dunhill</h2>
           <span class="travel"><b>Travel</b></span>
           <b>Deals</b>
         </div>
-        <div class="pages">
-          <a href="home.html" class="links">Home</a>
+        <nav>
+          <a href="home.html" class="links"><p>Home</p></a>
           <a href="about.html" class="links">About Us</a>
           <a href="login.html" class="links">Login</a>
           <a href="#" class="links">Hotel</a>
           <a href="#" class="links">Cruises</a>
-        </div>
-      </nav>
+        </nav>
+      </header>
       <main>
         <!-- search holiday -->
         <div class="search__holiday">
           <h1>Explore</h1>
           <h2>The World</h2>
           <div class="search__holiday--inputs">
-            <input type="search" placeholder="Your Destination or Hotel" />
-            <input type="date" />
+            <div class="search">
+              <i class="fa-solid fa-earth-americas"></i>
+              <input type="search" placeholder="Your Destination or Hotel" />
+            </div>
+            <div class="date">
+              <label for="d1">Check In</label>
+              <input type="date" name="d1" />
+              <label for="d2">Check Out</label>
+              <input type="date" name="d2" />
+            </div>
             <div class="only__for--btnColor">
               <button class="search__holiday--button">
                 SEARCH FOR MY HOLIDAY
