--- a/home.html
+++ b/home.html
@@ -11,7 +11,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -80,42 +79,215 @@
             <button>TOURS</button>
           </div>
           <div class="travel__planning--informations">
-            <div>
+            <div class="where__to">
               <label for="whereTo">Where to? </label>
-              <input type="text" name="whereTo" placeholder="New York,USA" />
+              <i class="fas fa-globe"></i>
+              <input
+                type="text"
+                name="whereTo"
+                placeholder="New York,USA"
+                class="informations__input"
+              />
             </div>
             <div>
               <label for="FlyingFrom">Flying from </label>
-              <input type="text" name="FlyingFrom" placeholder="London" />
+              <input
+                type="text"
+                name="FlyingFrom"
+                placeholder="London"
+                class="informations__input"
+              />
             </div>
             <div>
               <label for="when">When? </label>
-              <input type="text" name="when" placeholder="Tue,30 Oct 2016" />
+              <input
+                type="text"
+                name="when"
+                placeholder="Tue,30 Oct 2016"
+                class="informations__input"
+              />
             </div>
             <div>
               <label for="long">For how long? </label>
-              <input type="text" name="long" placeholder="7 nights" />
+              <input
+                type="text"
+                name="long"
+                placeholder="7 nights"
+                class="informations__input"
+              />
             </div>
             <button>FIND A HOLIDAY</button>
           </div>
           <div class="travel__planning--icons">
-            <i class="fas fa-circle"></i>
-            <i class="fas fa-circle"></i>
-            <i class="fas fa-circle"></i>
-            <i class="fas fa-circle"></i>
-            <i class="fas fa-circle"></i>
-            <i class="fas fa-circle"></i>
+            <div class="dots__icon">
+              <i class="fas fa-circle"></i>
+              <i class="fas fa-circle"></i>
+              <i class="fas fa-circle"></i>
+              <i class="fas fa-circle"></i>
+              <i class="fas fa-circle"></i>
+              <i class="fas fa-circle"></i>
+            </div>
+
             <i class="fas fa-plane-departure fa-2x"></i>
           </div>
-          <h1>START YOUR TRAVEL PLANNING HERE</h1>
-          <a href="">DISCOVER OUR TOP DESTINATIONS</a>
+          <div class="dicover__destinations">
+            <h1>START YOUR TRAVEL PLANNING HERE</h1>
+            <a href="">DISCOVER OUR TOP DESTINATIONS</a>
+          </div>
           <div class="travel__planning--links">
             <a href="">WORLWIDE</a>
             <a href="">POPULAR</a>
             <a href="">EXOTIC</a>
             <a href="">SPECIAL OFFERS</a>
           </div>
+
+          <!-- images of travel planning section -->
+          <div class="travel__planning--images">
+            <!-- new york image -->
+            <div class="image__container">
+              <img src="img/newYork.jpeg" alt="" class="newYork" />
+              <div class="overlay overlay__newYork">
+                <h2>NEW YORK</h2>
+                <hr />
+                <div class="city__search">
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find Hotels</p>
+                  </div>
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find Flights</p>
+                  </div>
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find cars</p>
+                  </div>
+                </div>
+                <div class="see__deals">
+                  <p>SEE DEALS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
+                </div>
+              </div>
+            </div>
+
+            <!-- sydney image -->
+            <div class="image__container">
+              <img src="img/sydney.webp" alt="" class="sydney" />
+              <div class="overlay overlay__sydney">
+                <h2>SYDNEY</h2>
+                <hr />
+
+                <div class="city__search">
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find Hotels</p>
+                  </div>
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find Flights</p>
+                  </div>
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find cars</p>
+                  </div>
+                </div>
+                <div class="see__deals">
+                  <p>SEE DEALS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
+                </div>
+              </div>
+            </div>
+
+            <!-- paris image -->
+
+            <div class="image__container">
+              <img src="img/paris.jpg" alt="" class="paris" />
+              <div class="overlay overlay__paris">
+                <h2>PARIS</h2>
+                <hr />
+
+                <div class="city__search">
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find Hotels</p>
+                  </div>
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find Flights</p>
+                  </div>
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find cars</p>
+                  </div>
+                </div>
+                <div class="see__deals">
+                  <p>SEE DEALS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
+                </div>
+              </div>
+            </div>
+
+            <!-- tokyo image -->
+
+            <div class="image__container">
+              <img src="img/tokyo.webp" alt="" class="tokyo" />
+              <div class="overlay overlay__tokyo">
+                <h2>TOKYO</h2>
+                <hr />
+
+                <div class="city__search">
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find Hotels</p>
+                  </div>
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find Flights</p>
+                  </div>
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find cars</p>
+                  </div>
+                </div>
+                <div class="see__deals">
+                  <p>SEE DEALS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
+                </div>
+              </div>
+            </div>
+
+            <!-- oslo image -->
+
+            <div class="image__container">
+              <img src="img/oslo.jpeg" alt="" class="oslo" />
+              <div class="overlay overlay__oslo">
+                <h2>OSLO</h2>
+                <hr />
+
+                <div class="city__search">
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find Hotels</p>
+                  </div>
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find Flights</p>
+                  </div>
+                  <div>
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <p>Find cars</p>
+                  </div>
+                </div>
+                <div class="see__deals">
+                  <p>SEE DEALS</p>
+                  <i class="fas fa-thin fa-angle-right"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button>VIEW MORE</button>
         </div>
+        <!-- end of travel planning -->
       </main>
     </div>
 
