Newsletter section and Footer added

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
           <b>Deals</b>
         </div>
         <nav>
-          <a href="home.html" class="links"><p>Home</p></a>
+          <a href="home.html" class="links current"><p>Home</p></a>
           <a href="about.html" class="links">About Us</a>
           <a href="login.html" class="links">Login</a>
           <a href="#" class="links">Hotel</a>
@@ -80,13 +80,13 @@
             </button>
           </div>
           <hr />
-          <!-- search holiday -->
+          <!-- Search Holiday -->
         </div>
       </div>
     </div>
     <main>
-      <!-- travel planning -->
-      <div class="travel__planning">
+      <!-- Travel Planning -->
+      <section class="travel__planning">
         <h1>CHOOSE YOUR TRAVEL METHOD</h1>
         <div class="travel__planning--label-info">
           <div class="travel__planning--labels">
@@ -157,7 +157,7 @@
           <a href="">SPECIAL</a>
         </div>
 
-        <!-- images of travel planning section -->
+        <!-- Images of travel planning section -->
         <div class="travel__planning--images">
           <!-- new york image -->
           <div class="image__container">
@@ -308,10 +308,32 @@
           </div>
         </div>
         <button class="view__more">VIEW MORE</button>
-      </div>
-      <!-- end of travel planning -->
+      </section>
+      <!-- End of travel planning -->
     </main>
 
-    <footer></footer>
+    <!-- NewsLetter Section -->
+    <section class="newsletter">
+      <div class="newsletter__info">
+        <h1>Subscribe to our Newsletter</h1>
+        <p>Get to know the latest offers</p>
+        <div class="newsletter__input">
+          <div class="inp">
+            <i class="fa-solid fa-envelope"></i>
+            <input type="email" placeholder="Email..." />
+          </div>
+          <button>SUBSCRIBE</button>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer__content">
+        <div class="company__name">
+          <h2>Dunhill</h2>
+          <span class="travel_title"><b>Travel</b></span>
+          <b>Deals</b>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
