Changes to About Us Page

--- a/home.html
+++ b/home.html
@@ -330,9 +330,62 @@
       <div class="footer__content">
         <div class="company__name">
           <h2>Dunhill</h2>
-          <span class="travel_title"><b>Travel</b></span>
-          <b>Deals</b>
+          <span class="travel_title--footer"><b>Travel</b></span>
+          Deals
         </div>
+        <div class="about">
+          <h4>ABOUT</h4>
+          <p>Company</p>
+          <p>Careers</p>
+          <p>Mobile</p>
+          <p>Blog</p>
+        </div>
+        <div class="travel--info">
+          <h4>TRAVEL INFORMATION</h4>
+          <p>Travel updates</p>
+          <p>Before you go</p>
+          <p>Holiday information</p>
+          <p>FAQs</p>
+          <p>Customer support</p>
+        </div>
+        <div class="sections">
+          <h4>SECTIONS</h4>
+          <p>Hotel Deals</p>
+          <p>Cruise Deals</p>
+          <p>Vacation Deals</p>
+          <p>Air Deals</p>
+          <p>Car Deals</p>
+          <p>Last Minute Travel Deals</p>
+          <p>Travel Themes</p>
+        </div>
+        <div class="contact--us">
+          <h4>CONTACT US</h4>
+          <p>Help</p>
+          <p>Press</p>
+          <p>Partners</p>
+          <p>Hotel Owners</p>
+        </div>
+      </div>
+      <div class="icons__enter--email">
+        <div class="footer--icons">
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-google"></i>
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-youtube"></i>
+        </div>
+        <div class="enter--email">
+          <input type="email" placeholder="Enter email to get best offers" />
+          <i class="fas fa-paper-plane"></i>
+        </div>
+      </div>
+      <hr />
+      <div class="conditions">
+        <div class="privacy--conditions">
+          <p>PRIVACY POLICY</p>
+          <p>TERMS & CONDITIONS</p>
+        </div>
+        <p>DUNHILL TRAVEL DEALS &copy; 2023</p>
       </div>
     </footer>
   </body>
