Image bug fixed

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
           </p>
         </div>
         <div class="boat--img">
-          <img src="/img/boat.webp" alt="" />
+          <img src="./img/boat.webp" alt="" />
           <p>Contact Us</p>
           <div class="overlay"></div>
         </div>
@@ -76,7 +76,7 @@
       <!-- the other section -->
       <div class="what-we-offer-section">
         <div class="passport" onclick="window.location='/home.html'">
-          <img src="/img/pasport.jpeg" alt="" />
+          <img src="./img/pasport.jpeg" alt="" />
           <p>Pick a Holiday</p>
           <div class="overlay"></div>
         </div>
