added log in and contact us page

--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
           <a href="home.html" class="links"><p>Home</p></a>
           <a href="about.html" class="links current">About Us</a>
           <a href="login.html" class="links">Login</a>
-          <a href="#" class="links">Hotel</a>
-          <a href="#" class="links">Cruises</a>
+          <a href="contact.html" class="links">Contact Us</a>
+          <!-- <a href="#" class="links">Cruises</a> -->
         </nav>
       </header>
       <div class="about--h1">
