--- a/home.html
+++ b/home.html
@@ -33,8 +33,8 @@
           <a href="home.html" class="links current"><p>Home</p></a>
           <a href="about.html" class="links">About Us</a>
           <a href="login.html" class="links">Login</a>
-          <a href="#" class="links">Hotel</a>
-          <a href="#" class="links">Cruises</a>
+          <a href="contact.html" class="links">Contact Us</a>
+          <!-- <a href="#" class="links">Cruises</a> -->
         </nav>
       </header>
       <div class="search__holiday">
@@ -323,6 +323,44 @@
             <input type="email" placeholder="Email..." />
           </div>
           <button>SUBSCRIBE</button>
+        </div>
+      </div>
+    </section>
+    <section class="travel__deals">
+      <div class="october__deals">
+        <h2>BEST TRAVEL DEALS</h2>
+        <p>OCT 12 - OCT 20</p>
+      </div>
+      <div class="canyon__deals">
+        <div class="canyon">
+          <img src="./img/p1.jpeg" alt="" />
+          <div class="canyon--text">
+            <h4>8-Day Guided Gran Canyon, Bryce & Zion Tour</h4>
+            <div class="price">
+              <p>ACTIVE, ADVENTUROUS</p>
+              <h4>$ 2399</h4>
+            </div>
+          </div>
+        </div>
+        <div class="canyon">
+          <img src="./img/p2.jpeg" alt="" />
+          <div class="canyon--text">
+            <h4>8-Day Guided Gran Canyon, Bryce & Zion Tour</h4>
+            <div class="price">
+              <p>ACTIVE, ADVENTUROUS</p>
+              <h4>$ 2399</h4>
+            </div>
+          </div>
+        </div>
+        <div class="canyon">
+          <img src="./img/p3.jpeg" alt="" />
+          <div class="canyon--text">
+            <h4>8-Day Guided Gran Canyon, Bryce & Zion Tour</h4>
+            <div class="price">
+              <p>ACTIVE, ADVENTUROUS</p>
+              <h4>$ 2399</h4>
+            </div>
+          </div>
         </div>
       </div>
     </section>
