--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,10 @@
           <a href="about.html" class="links">About Us</a>
           <a href="login.html" class="links">Login</a>
           <a href="contact.html" class="links current">Contact Us</a>
-          <!-- <a href="#" class="links">Cruises</a> -->
         </nav>
+        <button class="menu">
+          <i class="fa-solid fa-bars menuBtn"></i>
+        </button>
       </header>
       <div class="lets__talk">Let's have a talk</div>
       <div class="contact__us">
@@ -50,28 +52,30 @@
         ></iframe>
         <div class="meet__us">
           <h1>Meet us</h1>
-          <div class="number">
-            <i class="fas fa-phone"></i>
-            <p>+38345123789</p>
-          </div>
-          <div class="email">
-            <i class="fas fa-envelope"></i>
-            <p>contact@gmail.com</p>
-          </div>
-          <div class="address">
-            <i class="fas fa-location-dot"></i>
-            <p>Sali Ceku St,no 35,4th floor,ap 10,Ferizaj</p>
+          <div class="info">
+            <div class="number">
+              <i class="fas fa-phone"></i>
+              <p>+38345123789</p>
+            </div>
+            <div class="email">
+              <i class="fas fa-envelope"></i>
+              <p>contact@gmail.com</p>
+            </div>
+            <div class="address">
+              <i class="fas fa-location-dot"></i>
+              <p>Sali Ceku 35 4th floor, ap. 10, Ferizaj</p>
+            </div>
           </div>
         </div>
         <div class="pitch__us">
           <h1>Pitch Us</h1>
-          <p>hello,</p>
+          <p>Hello,</p>
           <p>
-            our company dunhill and our e-mail address is
+            Our company dunhill and our e-mail address is
             <span>dunhill@gmail.com</span> and we would like to discuss about
             your next travel.
           </p>
-          <button>send</button>
+          <button>Send</button>
         </div>
       </div>
     </div>
