--- a/home.html
+++ b/home.html
@@ -34,8 +34,10 @@
           <a href="about.html" class="links">About Us</a>
           <a href="login.html" class="links">Login</a>
           <a href="contact.html" class="links">Contact Us</a>
-          <!-- <a href="#" class="links">Cruises</a> -->
         </nav>
+        <button class="menu">
+          <i class="fa-solid fa-bars menuBtn"></i>
+        </button>
       </header>
       <div class="search__holiday">
         <div class="search__holidays">
@@ -75,7 +77,7 @@
           <p>Bora Bora</p>
           <div class="search__borabora">
             <p>MATIRA BEACH</p>
-            <button>
+            <button class="get-there">
               GET THERE <i class="fas fa-thin fa-angle-right"></i>
             </button>
           </div>
@@ -333,6 +335,8 @@
       </div>
       <div class="canyon__deals">
         <div class="canyon">
+          <p>Pick this Destination</p>
+          <div class="overlay"></div>
           <img src="./img/p1.jpeg" alt="" />
           <div class="canyon--text">
             <h4>8-Day Guided Gran Canyon, Bryce & Zion Tour</h4>
@@ -371,37 +375,37 @@
           <span class="travel_title--footer"><b>Travel</b></span>
           Deals
         </div>
-        <div class="about">
-          <h4>ABOUT</h4>
-          <p>Company</p>
-          <p>Careers</p>
-          <p>Mobile</p>
-          <p>Blog</p>
-        </div>
-        <div class="travel--info">
-          <h4>TRAVEL INFORMATION</h4>
-          <p>Travel updates</p>
-          <p>Before you go</p>
-          <p>Holiday information</p>
-          <p>FAQs</p>
-          <p>Customer support</p>
-        </div>
-        <div class="sections">
-          <h4>SECTIONS</h4>
-          <p>Hotel Deals</p>
-          <p>Cruise Deals</p>
-          <p>Vacation Deals</p>
-          <p>Air Deals</p>
-          <p>Car Deals</p>
-          <p>Last Minute Travel Deals</p>
-          <p>Travel Themes</p>
-        </div>
-        <div class="contact--us">
-          <h4>CONTACT US</h4>
-          <p>Help</p>
-          <p>Press</p>
-          <p>Partners</p>
-          <p>Hotel Owners</p>
+        <div class="footer__sections">
+          <div class="about">
+            <h4>ABOUT</h4>
+            <p>Company</p>
+            <p>Careers</p>
+            <p>Mobile</p>
+            <p>Blog</p>
+          </div>
+          <div class="travel--info">
+            <h4>TRAVEL INFORMATION</h4>
+            <p>Travel updates</p>
+            <p>Before you go</p>
+            <p>Holiday information</p>
+            <p>FAQs</p>
+            <p>Customer support</p>
+          </div>
+          <div class="sections">
+            <h4>SECTIONS</h4>
+            <p class="explore">Explore Holidays</p>
+            <p class="method">Travel Method</p>
+            <p class="dest">Top Destinations</p>
+            <p class="news">Newsletter</p>
+            <p class="deals">Travel Deals</p>
+          </div>
+          <div class="contact--us">
+            <h4>CONTACT US</h4>
+            <p>Help</p>
+            <p>Press</p>
+            <p>Partners</p>
+            <p>Hotel Owners</p>
+          </div>
         </div>
       </div>
       <div class="icons__enter--email">
@@ -413,7 +417,7 @@
           <i class="fa-brands fa-youtube"></i>
         </div>
         <div class="enter--email">
-          <input type="email" placeholder="Enter email to get best offers" />
+          <input type="email" placeholder="Get the best offers" />
           <i class="fas fa-paper-plane"></i>
         </div>
       </div>
