--- a/login.html
+++ b/login.html
@@ -34,14 +34,18 @@
           <a href="about.html" class="links">About Us</a>
           <a href="login.html" class="links current">Login</a>
           <a href="contact.html" class="links">Contact Us</a>
-          <!-- <a href="#" class="links">Cruises</a> -->
         </nav>
+        <button class="menu">
+          <i class="fa-solid fa-bars menuBtn"></i>
+        </button>
       </header>
       <div class="login__form">
         <h1>Log in to Dunhill travel</h1>
-        <input type="email" placeholder="Email" />
-        <input type="password" placeholder="Password" />
-        <button type="submit">Sign in</button>
+        <form action="">
+          <input type="email" placeholder="Email" />
+          <input type="password" placeholder="Password" />
+          <button type="submit">Sign in</button>
+        </form>
         <p>Don't have an account? <button>Sign up</button></p>
         <hr />
         <div class="sign__with--other">
